# r2k

./: .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  builder_tests.py  pyproject.toml  setup.cfg  todo.md
r2k/: config.py  constants.py  dates.py  email.py  email_sender.py  feeds.py  mercury.py  unicode.py
r2k/cli/: __init__.py  cli_utils.py  email.py  feeds.py  logger.py
r2k/cli/config/: __init__.py  config_init.py  config_set.py  config_show.py  prompts.py
r2k/cli/feed/: __init__.py  feed_add.py  feed_import.py  feed_remove.py  feed_show.py
r2k/cli/kindle/: __init__.py  kindle_send.py
r2k/cli/subscription/: __init__.py  subscription_add.py  subscription_import.py  subscription_remove.py  subscription_show.py
r2k/ebook/: base_parser.py  epub_builder.py  html_builder.py  images.py  mercury.py  mercury_parser.py  readability_parser.py  single_article.py
rss_to_kindle/: config.py  constants.py  email_sender.py
rss_to_kindle/cli/: __init__.py  cli_utils.py  logger.py  unicode.py
rss_to_kindle/cli/config/: __init__.py  config_init.py  config_set.py  config_show.py
rss_to_kindle/cli/subscription/: __init__.py  subscription_add.py  subscription_import.py  subscription_remove.py  subscription_show.py
templates/: article.html  base.html  main.html  toc.html
templates/epub/OEBPS/: content.opf  stylesheet.css  title.xhtml  toc.ncx  toc.xhtml
templates/epub/OEBPS/content/: article.xhtml
templates/epub/_r2k/: navpoint.xml
tests/: test_sanity.py
